# config_manager

./: LICENSE  README.md  pyproject.toml
config_manager/: __init__.py  config_manager.py  config_manager2.py
test/: __init__.py  _fs_delete.py  test_config_manager.py  test_config_manager2.py
