[tool.poetry]
name = "config_manager"
version = "0.9.1"
description = "Manages Lifecycle of Application Configuration"
authors = ["Ron Williams <becker.wiliams@gmail.com>"]
readme = "README.md"
license = "MIT"

packages = [
	{ include = "config_manager" }
]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

